# goldcomb

./: .flake8  .gitignore  CONTRIBUTING.md  GOLDCOMB.md  README.md  install.sh  pyproject.toml
assets/: README.md  logo.py
goldcomb/: __init__.py  agents.py  chats.py  cli.py  config.py  config_cli.py  git_tools.py  identity.py  memory.py  names.py  oauth.py  presets.py  pricing.py  recall.py  roles.py  scrum.py  server.py  theme.py  threads.py  tools.py  ui.py
goldcomb/engines/: __init__.py  claude.py
goldcomb/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
macos/Goldcomb/: Info.plist  Package.swift  make-app.sh
macos/Goldcomb/Sources/Goldcomb/: AgentIdentity.swift  AgentSession.swift  AgentsTabView.swift  AttachmentChipTray.swift  ChatLinkRouter.swift  ChatRoomView.swift  ChatRooms.swift  ChatView.swift  ChatsTabView.swift  ComposerSendRules.swift  ContentView.swift  DiffText.swift  (+18 more)
nexais/: __init__.py  cli.py  config.py  presets.py  tools.py  ui.py
nexais/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
tests/: README.md  test_agent_config.py  test_agents.py  test_ask_user.py  test_chat_attachments.py  test_chats.py  test_claude_engine.py  test_compact.py  test_config_presets.py  test_empty_messages.py  test_git_tools.py  test_identity.py  test_markup_escape.py  test_memory.py  test_models_filter.py  test_names.py  test_oauth.py  test_openai_token_param.py  test_pricing.py  test_prompt_caching.py  test_provider_config.py  test_records.py  test_retry.py  test_roles.py  test_scrum.py  test_server.py  test_smoke_cli.py  test_threads.py  test_ui.py
(+17 files in other folders)
