[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldcomb"
version = "0.1.0"
description = "A Claude-Code-style terminal AI agent that works with any provider — configure and switch models with slash commands."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Baker" }]
keywords = ["ai", "cli", "agent", "llm", "anthropic", "openai", "gemini"]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
# Claude mode (/mode claude): delegate turns to the Claude Code harness. The SDK
# bundles the Claude Code CLI. Install with:  pip install "goldcomb[claude]"
claude = ["claude-agent-sdk>=0.2"]

[project.scripts]
goldcomb = "goldcomb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["goldcomb"]
